completed the spread operator challenge

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>React App</title>
     <link
+      href="https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
